--- a/index.html
+++ b/index.html
@@ -44,160 +44,41 @@
         <![endif]-->
     </head>
     <body>
-        <!-- start header -->
-        <header>
-            <!-- start navigation -->
-            <nav class="navbar navbar-default bootsnav navbar-fixed-top header-light bg-transparent white-link">
-                <div class="container nav-header-container">
-                    <div class="row">
-                        <!-- start logo -->
-                        <div class="col-md-2 col-xs-5">
-                            <a href="index.html" title="Pofo" class="logo"><img src="images/logo-1.png" data-rjs="images/logo@2x.png" class="logo-dark" alt="Pofo"><img src="images/logo-1.png" data-rjs="images/logo-white@2x.png" alt="Pofo" class="logo-light default"></a>
-                        </div>
-                        <!-- end logo -->
-                        <div class="col-md-7 col-xs-2 width-auto pull-right accordion-menu xs-no-padding-right">
-                            <button type="button" class="navbar-toggle collapsed pull-right" data-toggle="collapse" data-target="#navbar-collapse-toggle-1">
-                                <span class="sr-only">toggle navigation</span>
-                                <span class="icon-bar"></span>
-                                <span class="icon-bar"></span>
-                                <span class="icon-bar"></span>
-                            </button>
-                            <div class="navbar-collapse collapse pull-right" id="navbar-collapse-toggle-1">
-                                <ul id="accordion" class="nav navbar-nav navbar-left no-margin alt-font text-normal" data-in="fadeIn" data-out="fadeOut">
-                                    <!-- start menu item -->
-                                    <li class=" megamenu-fw">
-                                        <a href="javascript:void(0);">Home</a><i class=" dropdown-toggle" data-toggle="dropdown" aria-hidden="true"></i>
-                                        <!-- start sub menu -->
-                                        <div class="menu-back-div dropdown-menu megamenu-content mega-menu collapse mega-menu-full">
-                                            <ul class="equalize sm-equalize-auto">
-                                                <!-- start sub menu column  -->
-                                                <li class="mega-menu-column col-lg-3 col-md-3 col-sm-12 col-xs-12">
-                                                    <ul>
-                                                    </ul>
-                                                </li>
-                                                    <ul>
-                                                    </ul>
-                                                </li>
-                                                    <ul>
-                                                    </ul>
-                                                </li>
-                                                    <ul>
-                                                       
-                                                    </ul>
-                                                </li>
-                                            </ul>
-                                        </div>
-                                    </li>
-                                    <!-- end menu item -->
-                                    <li class=" simple-dropdown"><a href="javascript:void(0);">Lifestyle</a><i class="dropdown-toggle" data-toggle="dropdown" aria-hidden="true"></i>
-                                        <!-- start sub menu -->
-                                        <ul class="dropdown-menu" role="menu">
-                                        </ul>
-                                    </li>
-                                    <li class="megamenu-fw">
-                                        <a href="javascript:void(0);">Twist It</a><i class=" dropdown-toggle" data-toggle="dropdown" aria-hidden="true"></i>
-                                        <!-- start sub menu -->
-                                        <div class="menu-back-div dropdown-menu megamenu-content mega-menu collapse mega-menu-full">
-                                            <ul class="equalize sm-equalize-auto">
-                                                <!-- start sub menu column  -->
-                                                <li class="mega-menu-column col-lg-3 col-md-3 col-sm-12 col-xs-12">
-                                                    <!-- start sub menu item  -->
-                                                    <ul>
-                                                    </ul>
-                                                    <ul>
-                                                    </ul>
-                                                    <ul>
-                                                    </ul>
-                                                    <ul>
-                                                    </ul>
-                                                </li>
-                                                <li class="mega-menu-column col-lg-3 col-md-3 col-sm-12 col-xs-12">
-                                                    <ul>
-                                                    </ul>
-                                                    <ul>
-                                                    </ul>
-                                                </li>
-                                                <li class="mega-menu-column col-lg-3 col-md-3 col-sm-12 col-xs-12">
-                                                    <ul>
-                                                    </ul>
-                                                </li>
-                                            </ul>
-                                        </div>
-                                    </li>
-                                    <li class=" simple-dropdown"><a href="javascript:void(0);" title="Blog">Said It</a><i class="dropdown-toggle" data-toggle="dropdown" aria-hidden="true"></i>
-                                        <!-- start sub menu -->
-                                        <ul class="dropdown-menu" role="menu">
-                                        </ul>
-                                        <!-- end sub menu -->
-                                    </li>
-                                    <li class="megamenu-fw">
-                                        <a href="javascript:void(0);">About</a><i class=" dropdown-toggle" data-toggle="dropdown" aria-hidden="true"></i>
-                                        <!-- start sub menu -->
-                                        <div class="menu-back-div dropdown-menu megamenu-content mega-menu collapse mega-menu-full icon-list-menu">
-                                            <!-- end sub menu -->
-                                        </div>
-                                    </li>
-                                    <li class="megamenu-fw">
-                                        <a href="javascript:void(0);">Contact</a><i class="dropdown-toggle" data-toggle="dropdown" aria-hidden="true"></i>
-                                        <!-- start sub menu -->
-                                        <div class="menu-back-div dropdown-menu megamenu-content mega-menu collapse mega-menu-full">
-                                            <!-- end sub menu -->
-                                        </div>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="col-md-2 col-xs-5 width-auto">
-                            <div class="header-searchbar">
-                                <a href="#search-header" class="header-search-form text-white"><i class="fas fa-search search-button"></i></a>
-                                <!-- search input-->
-                                <form id="search-header" method="post" action="search-result.html" name="search-header" class="mfp-hide search-form-result">
-                                    <div class="search-form position-relative">
-                                        <button type="submit" class="fas fa-search close-search search-button"></button>
-                                        <input type="text" name="search" class="search-input" placeholder="Enter your keywords..." autocomplete="off">
-                                    </div>
-                                </form>
-                            </div>
-
+       <!-- start header -->
+       <header>
+        <!-- start navigation -->
+        <nav class="navbar navbar-default bootsnav navbar-fixed-top header-light bg-transparent nav-box-width white-link">
+            <div class="container nav-header-container">
+                <div class="row">
+                    <!-- start logo -->
+                    <div class="col-md-2 col-xs-5">
+                        <a href="index.html" title="" class="logo"><img src="images/logo-1.png" data-rjs="images/logo@2x.png" class="logo-dark" alt=""><img src="images/logo-1.png" data-rjs="images/logo-white@2x.png" alt="" class="logo-light default"></a>
+                    </div>
+                    <!-- end logo -->
+                    <div class="col-md-7 col-xs-2 width-auto pull-right accordion-menu">
+                        <button type="button" class="navbar-toggle collapsed pull-right" data-toggle="collapse" data-target="#navbar-collapse-toggle-1">
+                            <span class="sr-only">toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                        <div class="navbar-collapse collapse pull-right" id="navbar-collapse-toggle-1">
+                            <ul class="nav navbar-nav navbar-left panel-group no-margin alt-font font-weight-800">
+                                <li><a href="#home" title="Home" class="inner-link">Home</a></li>
+                                <li><a href="#about" title="About" class="inner-link">About</a></li>
+                                <li><a href="#services" title="Services" class="inner-link">Lifestyle</a></li>
+                                <li><a href="#work" title="Work" class="inner-link">Twist It</a></li>
+                                <li><a href="#team" title="Team" class="inner-link">Said It</a></li>
+                                <li><a href="#blog" title="Blog" class="inner-link">Contact</a></li>
+                            </ul>
                         </div>
                     </div>
                 </div>
-            </nav>
-            <!-- end navigation --> 
-            <div class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-right" id="cbp-spmenu-s2">
-                <button class="close-button-menu side-menu-close" id="close-pushmenu"></button>
-                <div class="display-table padding-twelve-all height-100 width-100 text-center">
-                    <div class="display-table-cell vertical-align-top padding-70px-top position-relative">
-                        <div class="row">
-                            <div class="col-lg-12 margin-70px-bottom">
-                                <img src="images/logo-black-big.png"/>
-                            </div>
-                            <div class="col-lg-12 margin-70px-bottom">
-                                <img src="images/sidebar-image1.png"/>
-                            </div>
-                            <div class="col-lg-12">
-                                <h5 class="alt-font text-extra-dark-gray"><span class="display-block font-weight-300 text-dark-gray">The world's most</span><strong>powerful website builder.</strong></h5>
-                            </div>
-                            <div class="col-lg-12">
-                                <a href="javascript:void(0);" class="btn btn-deep-pink btn-small text-extra-small border-radius-4"><i class="fas fa-play-circle icon-very-small margin-5px-right no-margin-left" aria-hidden="true"></i>Purchase Now</a>
-                            </div>
-                            <div class="col-md-12 margin-100px-top text-center">
-                                <div class="icon-social-medium margin-three-bottom">
-                                    <a href="https://www.facebook.com/" target="_blank" class="text-extra-dark-gray text-deep-pink-hover margin-one-lr"><i class="fab fa-facebook-f" aria-hidden="true"></i></a>
-                                    <a href="https://twitter.com/" target="_blank" class="text-extra-dark-gray text-deep-pink-hover margin-one-lr"><i class="fab fa-twitter" aria-hidden="true"></i></a>
-                                    <a href="https://dribbble.com/" target="_blank" class="text-extra-dark-gray text-deep-pink-hover margin-one-lr"><i class="fab fa-dribbble" aria-hidden="true"></i></a>
-                                    <a href="https://plus.google.com" target="_blank" class="text-extra-dark-gray text-deep-pink-hover margin-one-lr"><i class="fab fa-google-plus-g" aria-hidden="true"></i></a>
-                                    <a href="https://www.tumblr.com/" target="_blank" class="text-extra-dark-gray text-deep-pink-hover margin-one-lr"><i class="fab fa-tumblr" aria-hidden="true"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
             </div>
-            <!-- end navigation -->  
-        </header>
-        <!-- end header -->
+        </nav>
+        <!-- end navigation -->  
+    </header>
+    <!-- end header -->
         <!-- start parallax section  -->
         <section class="wow fadeIn no-padding parallax xs-background-image-center" data-stellar-background-ratio="0.5" style="background-image: url('images/hero-slider-1.jpg')">
             <div class="container-fluid position-relative full-screen">
@@ -605,12 +486,12 @@
                 <div class="row align-items-center">
                     <!-- start slogan -->
                     <div class="col-lg-4 col-md-5 text-center alt-font sm-margin-15px-bottom">
-                        London based highly creative studio
+                        Niko create statement here
                     </div>
                     <!-- end slogan -->
                     <!-- start logo -->
                     <div class="col-lg-4 col-md-2 text-center sm-margin-10px-bottom">
-                        <a href="index.html"><img class="footer-logo" src="images/logo-white.png" data-rjs="images/logo-white@2x.png" alt="Pofo"></a>
+                        <a href="index.html"><img class="footer-logo" src="images/logo-1.png" data-rjs="images/logo-white@2x.png" alt=""></a>
                     </div>
                     <!-- end logo -->
                     <!-- start social media -->
