hidden-xs added

--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
                     <!-- end slider pagination -->
                 </main>
                 <!-- start right sidebar  -->
-                <aside class="col-12 col-lg-3 float-right">
+                <aside class="col-12 col-lg-3 float-right hidden-xs hidden-sm hidden-md">
                     <div class="d-inline-block width-100 margin-45px-bottom sm-margin-25px-bottom">
                         <form>
                             <div class="position-relative">
