--- a/about.html
+++ b/about.html
@@ -66,10 +66,10 @@
                             <ul class="nav navbar-nav navbar-left panel-group no-margin alt-font font-weight-800">
                                 <li><a href="index.html" title="Home" class="inner-link">Home</a></li>
                                 <li><a href="about.html" title="About" class="inner-link">About</a></li>
-                                <li><a href="#services" title="Services" class="inner-link">Lifestyle</a></li>
-                                <li><a href="#work" title="Work" class="inner-link">Twist It</a></li>
-                                <li><a href="#team" title="Team" class="inner-link">Said It</a></li>
-                                <li><a href="#blog" title="Blog" class="inner-link">Contact</a></li>
+                                <li><a href="lifestyle.html" title="Services" class="inner-link">Lifestyle</a></li>
+                                <li><a href="twist-it.html" title="Work" class="inner-link">Twist It</a></li>
+                                <li><a href="said-it.html" title="Team" class="inner-link">Said It</a></li>
+                                <li><a href="contact.html" title="Blog" class="inner-link">Contact</a></li>
                             </ul>
                         </div>
                     </div>
