--- a/twist-it.html
+++ b/twist-it.html
@@ -2,7 +2,7 @@
 <html class="no-js" lang="en">
     <head>
         <!-- title -->
-        <title>Niko Said It</title>
+        <title>Twist It</title>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1" />
@@ -79,7 +79,147 @@
         <!-- end navigation -->  
     </header>
     <!-- end header -->
-       
+       <!-- start team slider section -->
+       <section class="wow fadeIn">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-12 col-lg-6 col-md-8 margin-eight-bottom md-margin-40px-bottom text-center last-paragraph-no-margin">
+                    <h5 class="alt-font font-weight-700 text-extra-dark-gray margin-15px-bottom text-uppercase">Creative People</h5>
+                    <p class="width-90 mx-auto sm-width-100 sm-no-margin-bottom">Lorem Ipsum is simply dummy text of the printing and typesetting industry. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+                </div>  
+            </div>
+            <div class="row">
+                <div class="col-12 p-0">
+                    <div class="swiper-container black-move blog-slider swiper-four-slides swiper-pagination-bottom">
+                        <div class="swiper-wrapper">
+                            <!--  start team item -->
+                            <div class="swiper-slide padding-15px-lr team-block text-left team-style-1 lg-margin-40px-bottom wow fadeInUp">
+                                <figure>
+                                    <div class="team-image sm-width-100">
+                                        <img src="images/home-twistit.JPG" alt="">
+                                        <div class="overlay-content text-center d-flex align-items-center justify-content-center">
+                                            <div class="icon-social-small">
+                                                <a href="http://www.facebook.com" class="text-white-2 text-white-2-hover" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                                                <a href="http://www.twitter.com" class="text-white-2 text-white-2-hover" target="_blank"><i class="fab fa-twitter"></i></a>
+                                                <a href="http://www.plus.google.com" class="text-white-2 text-white-2-hover" target="_blank"><i class="fab fa-google-plus-g"></i></a>
+                                                <a href="http://www.instagram.com" class="text-white-2 text-white-2-hover" target="_blank"><i class="fab fa-instagram"></i></a>
+                                            </div>
+                                        </div>
+                                        <div class="team-overlay bg-deep-pink opacity8"></div>
+                                    </div>
+                                    <figcaption>
+                                        <div class="team-member-position margin-20px-top text-center">
+                                            <div class="text-small font-weight-500 text-extra-dark-gray text-uppercase">Hugh Macleod</div>
+                                            <div class="text-extra-small text-uppercase text-medium-gray">Creative Director</div>
+                                        </div>   
+                                    </figcaption>
+                                </figure>
+                            </div>
+                            <!-- end team item -->
+                            <!--  start team item -->
+                            <div class="swiper-slide padding-15px-lr team-block text-left team-style-1 lg-margin-40px-bottom wow fadeInUp" data-wow-delay="0.2s">
+                                <figure>
+                                    <div class="team-image sm-width-100">
+                                        <img src="images/home-twistit.JPG" alt="">
+                                        <div class="overlay-content text-center d-flex align-items-center justify-content-center">
+                                            <div class="icon-social-small">
+                                                <a href="http://www.facebook.com" class="text-white-2 text-white-2-hover" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                                                <a href="http://www.twitter.com" class="text-white-2 text-white-2-hover" target="_blank"><i class="fab fa-twitter"></i></a>
+                                                <a href="http://www.plus.google.com" class="text-white-2 text-white-2-hover" target="_blank"><i class="fab fa-google-plus-g"></i></a>
+                                                <a href="http://www.instagram.com" class="text-white-2 text-white-2-hover" target="_blank"><i class="fab fa-instagram"></i></a>
+                                            </div>
+                                        </div>
+                                        <div class="team-overlay bg-deep-pink opacity8"></div>
+                                    </div>
+                                    <figcaption>
+                                        <div class="team-member-position margin-20px-top text-center">
+                                            <div class="text-small font-weight-500 text-extra-dark-gray text-uppercase">Jeremy Dupont</div>
+                                            <div class="text-extra-small text-uppercase text-medium-gray">Creative Director</div>
+                                        </div>   
+                                    </figcaption>
+                                </figure>
+                            </div>
+                            <!-- end team item -->
+                            <!--  start team item -->
+                            <div class="swiper-slide padding-15px-lr team-block text-left team-style-1 lg-margin-40px-bottom wow fadeInUp" data-wow-delay="0.4s">
+                                <figure>
+                                    <div class="team-image sm-width-100">
+                                        <img src="images/home-twistit.JPG" alt="">
+                                        <div class="overlay-content text-center d-flex align-items-center justify-content-center">
+                                            <div class="icon-social-small">
+                                                <a href="http://www.facebook.com" class="text-white-2 text-white-2-hover" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                                                <a href="http://www.twitter.com" class="text-white-2 text-white-2-hover" target="_blank"><i class="fab fa-twitter"></i></a>
+                                                <a href="http://www.plus.google.com" class="text-white-2 text-white-2-hover" target="_blank"><i class="fab fa-google-plus-g"></i></a>
+                                                <a href="http://www.instagram.com" class="text-white-2 text-white-2-hover" target="_blank"><i class="fab fa-instagram"></i></a>
+                                            </div>
+                                        </div>
+                                        <div class="team-overlay bg-deep-pink opacity8"></div>
+                                    </div>
+                                    <figcaption>
+                                        <div class="team-member-position margin-20px-top text-center">
+                                            <div class="text-small font-weight-500 text-extra-dark-gray text-uppercase">Sara Smith</div>
+                                            <div class="text-extra-small text-uppercase text-medium-gray">Creative Studio Head</div>
+                                        </div>   
+                                    </figcaption>
+                                </figure>
+                            </div>
+                            <!-- end team item -->
+                            <!--  start team item -->
+                            <div class="swiper-slide padding-15px-lr team-block text-left team-style-1 lg-margin-40px-bottom wow fadeInUp" data-wow-delay="0.6s">
+                                <figure>
+                                    <div class="team-image sm-width-100">
+                                        <img src="images/home-twistit.JPG" alt="">
+                                        <div class="overlay-content text-center d-flex align-items-center justify-content-center">
+                                            <div class="icon-social-small">
+                                                <a href="http://www.facebook.com" class="text-white-2 text-white-2-hover" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                                                <a href="http://www.twitter.com" class="text-white-2 text-white-2-hover" target="_blank"><i class="fab fa-twitter"></i></a>
+                                                <a href="http://www.plus.google.com" class="text-white-2 text-white-2-hover" target="_blank"><i class="fab fa-google-plus-g"></i></a>
+                                                <a href="http://www.instagram.com" class="text-white-2 text-white-2-hover" target="_blank"><i class="fab fa-instagram"></i></a>
+                                            </div>
+                                        </div>
+                                        <div class="team-overlay bg-deep-pink opacity8"></div>
+                                    </div>
+                                    <figcaption>
+                                        <div class="team-member-position margin-20px-top text-center">
+                                            <div class="text-small font-weight-500 text-extra-dark-gray text-uppercase">Bill Gardner</div>
+                                            <div class="text-extra-small text-uppercase text-medium-gray">Co-Founder / Design</div>
+                                        </div>   
+                                    </figcaption>
+                                </figure>
+                            </div>
+                            <!-- end team item -->
+                            <!--  start team item -->
+                            <div class="swiper-slide padding-15px-lr team-block text-left team-style-1 lg-margin-40px-bottom wow fadeInUp">
+                                <figure>
+                                    <div class="team-image sm-width-100">
+                                        <img src="images/home-twistit.JPG" alt="">
+                                        <div class="overlay-cntent text-center d-flex align-items-center justify-content-center">
+                                            <div class="icon-social-small">
+                                                <a href="http://www.facebook.com" class="text-white-2 text-white-2-hover" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                                                <a href="http://www.twitter.com" class="text-white-2 text-white-2-hover" target="_blank"><i class="fab fa-twitter"></i></a>
+                                                <a href="http://www.plus.google.com" class="text-white-2 text-white-2-hover" target="_blank"><i class="fab fa-google-plus-g"></i></a>
+                                                <a href="http://www.instagram.com" class="text-white-2 text-white-2-hover" target="_blank"><i class="fab fa-instagram"></i></a>
+                                            </div>
+                                        </div>
+                                        <div class="team-overlay bg-deep-pink opacity8"></div>
+                                    </div>
+                                    <figcaption>
+                                        <div class="team-member-position margin-20px-top text-center">
+                                            <div class="text-small font-weight-500 text-extra-dark-gray text-uppercase">Hugh Macleod</div>
+                                            <div class="text-extra-small text-uppercase text-medium-gray">Creative Director</div>
+                                        </div>   
+                                    </figcaption>
+                                </figure>
+                            </div>
+                            <!-- end team item -->                                
+                        </div>                        
+                        <div class="swiper-pagination swiper-pagination-four-slides"></div>
+                    </div>
+                </div>
+            </div> 
+        </div>
+    </section>
+    <!-- end team slider section -->
     <!-- start footer --> 
     <footer class="footer-classic-dark bg-extra-dark-gray padding-five-bottom sm-padding-30px-bottom">
         <div class="bg-dark-footer padding-50px-tb sm-padding-30px-tb">
