--- a/lifestyle.html
+++ b/lifestyle.html
@@ -86,7 +86,7 @@
                 <div class="row align-items-center">
                     <div class="col-12 d-flex flex-column justify-content-center text-center extra-small-screen page-title-large">
                         <!-- start page title -->
-                        <h1 class="text-white-2 alt-font font-weight-600 letter-spacing-minus-1 margin-10px-bottom">Blog right sidebar</h1>
+                        <h1 class="text-white-2 alt-font font-weight-600 letter-spacing-minus-1 margin-10px-bottom">Lifestyle</h1>
                         <span class="text-white-2 opacity6 alt-font">Lorem Ipsum is simply dummy text printing</span>
                         <!-- end page title --> 
                     </div>
