--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <div class="row">
                     <!-- start logo -->
                     <div class="col-md-2 col-xs-5">
-                        <a href="index.html" title="" class="logo"><img src="images/logo-1.png" data-rjs="images/logo@2x.png" class="logo-dark" alt=""><img src="images/logo-1.png" data-rjs="images/logo-white@2x.png" alt="" class="logo-light default"></a>
+                        <a href="index.html" title="" class="logo"><img src="images/logo-black-wore-it.png" data-rjs="images/logo@2x.png" class="logo-dark" alt=""><img src="images/logo-black-wore-it.png" data-rjs="images/logo-white@2x.png" alt="" class="logo-light default"></a>
                     </div>
                     <!-- end logo -->
                     <div class="col-md-7 col-xs-2 width-auto pull-right accordion-menu">
@@ -164,11 +164,11 @@
 <section class="wow fadeIn">
     <div class="container">
         <div class="row">
-            <div>
+            <!-- <div>
                 <div class="position-relative overflow-hidden width-100">
                     <span class="text-small text-outside-line-full alt-font font-weight-600 text-uppercase">Team Member Style 01</span>
                 </div>
-            </div>
+            </div> -->
         </div>
         <div class="row" id="left-flex">
             <!-- start team item -->
@@ -205,11 +205,11 @@
 <section class="wow fadeIn">
     <div class="container">
         <div class="row">
-            <div class="col-md-7 col-sm-12 col-xs-12 center-col text-center margin-100px-bottom xs-margin-40px-bottom">
+            <!-- <div class="col-md-7 col-sm-12 col-xs-12 center-col text-center margin-100px-bottom xs-margin-40px-bottom">
                 <div class="position-relative overflow-hidden width-100">
                     <span class="text-small text-outside-line-full alt-font font-weight-600 text-uppercase">Team Member Style 01</span>
                 </div>
-            </div>
+            </div> -->
         </div>
         <div class="row">
             <!-- start team item -->
@@ -246,11 +246,11 @@
 <section class="wow fadeIn">
     <div class="container">
         <div class="row">
-            <div class="col-md-7 col-sm-12 col-xs-12 center-col text-center margin-100px-bottom xs-margin-40px-bottom">
+            <!-- <div class="col-md-7 col-sm-12 col-xs-12 center-col text-center margin-100px-bottom xs-margin-40px-bottom">
                 <div class="position-relative overflow-hidden width-100">
                     <span class="text-small text-outside-line-full alt-font font-weight-600 text-uppercase">Team Member Style 01</span>
                 </div>
-            </div>
+            </div> -->
         </div>
         <div class="row" id="left-flex">
             
@@ -296,7 +296,7 @@
                     <!-- end slogan -->
                     <!-- start logo -->
                     <div class="col-lg-4 col-md-2 text-center sm-margin-10px-bottom">
-                        <a href="index.html"><img class="footer-logo" src="images/logo-1.png" data-rjs="images/logo-white@2x.png" alt=""></a>
+                        <a href="index.html"><img class="footer-logo" src="images/logo-black-wore-it.png" data-rjs="images/logo-white@2x.png" alt=""></a>
                     </div>
                     <!-- end logo -->
                     <!-- start social media -->
