--- a/default-post.html
+++ b/default-post.html
@@ -2,15 +2,15 @@
 <html class="no-js" lang="en">
     <head>
         <!-- title -->
-        <title>POFO – Creative Agency, Corporate and Portfolio Multi-purpose Template</title>
+        <title>New Post Change Title Niko</title>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1" />
-        <meta name="author" content="ThemeZaa">
+        <meta name="author" content="Niko wore it">
         <!-- description -->
-        <meta name="description" content="POFO is a highly creative, modern, visually stunning and Bootstrap responsive multipurpose agency and portfolio HTML5 template with 25 ready home page demos.">
+        <meta name="description" content="">
         <!-- keywords -->
-        <meta name="keywords" content="creative, modern, clean, bootstrap responsive, html5, css3, portfolio, blog, agency, templates, multipurpose, one page, corporate, start-up, studio, branding, designer, freelancer, carousel, parallax, photography, personal, masonry, grid, coming soon, faq">
+        <meta name="">
         <!-- favicon -->
         <link rel="shortcut icon" href="images/favicon.png">
         <link rel="apple-touch-icon" href="images/apple-touch-icon-57x57.png">
@@ -55,7 +55,7 @@
                 <div class="row">
                     <!-- start logo -->
                     <div class="col-md-2 col-xs-5">
-                        <a href="index.html" title="" class="logo"><img src="images/logo-1.png" data-rjs="images/logo@2x.png" class="logo-dark" alt=""><img src="images/logo-1.png" data-rjs="images/logo-white@2x.png" alt="" class="logo-light default"></a>
+                        <a href="index.html" title="" class="logo"><img src="images/logo-black-wore-it.png" class="logo-dark" alt=""><img src="images/logo-black-wore-it.png" alt="" class="logo-light default"></a>
                     </div>
                     <!-- end logo -->
                     <div class="col-md-7 col-xs-2 width-auto pull-right accordion-menu">
@@ -416,7 +416,7 @@
                     <!-- end slogan -->
                     <!-- start logo -->
                     <div class="col-lg-4 col-md-2 text-center sm-margin-10px-bottom">
-                        <a href="index.html"><img class="footer-logo" src="images/logo-1.png" data-rjs="images/logo-white@2x.png" alt=""></a>
+                        <a href="index.html"><img class="footer-logo" src="images/logo-black-wore-it.png" alt=""></a>
                     </div>
                     <!-- end logo -->
                     <!-- start social media -->
