--- a/lifestyle.html
+++ b/lifestyle.html
@@ -52,7 +52,7 @@
                 <div class="row">
                     <!-- start logo -->
                     <div class="col-md-2 col-xs-5">
-                        <a href="index.html" title="" class="logo"><img src="images/logo-1.png" data-rjs="images/logo@2x.png" class="logo-dark" alt=""><img src="images/logo-1.png" data-rjs="images/logo-white@2x.png" alt="" class="logo-light default"></a>
+                        <a href="index.html" title="" class="logo"><img src="images/logo-black-wore-it.png data-rjs="images/logo@2x.png" class="logo-dark" alt=""><img src="images/logo-black-wore-it.png" data-rjs="images/logo-white@2x.png" alt="" class="logo-light default"></a>
                     </div>
                     <!-- end logo -->
                     <div class="col-md-7 col-xs-2 width-auto pull-right accordion-menu">
