--- a/said-it.html
+++ b/said-it.html
@@ -52,7 +52,7 @@
                 <div class="row">
                     <!-- start logo -->
                     <div class="col-md-2 col-xs-5">
-                        <a href="index.html" title="" class="logo"><img src="images/logo-1.png" data-rjs="images/logo@2x.png" class="logo-dark" alt=""><img src="images/logo-1.png" data-rjs="images/logo-white@2x.png" alt="" class="logo-light default"></a>
+                        <a href="index.html" title="" class="logo"><img src="images/logo-black-wore-it.png data-rjs="images/logo@2x.png" class="logo-dark" alt=""><img src="images/logo-black-wore-it.png" data-rjs="images/logo-white@2x.png" alt="" class="logo-light default"></a>
                     </div>
                     <!-- end logo -->
                     <div class="col-md-7 col-xs-2 width-auto pull-right accordion-menu">
@@ -135,7 +135,7 @@
                     <!-- end slogan -->
                     <!-- start logo -->
                     <div class="col-lg-4 col-md-2 text-center sm-margin-10px-bottom">
-                        <a href="index.html"><img class="footer-logo" src="images/logo-1.png" data-rjs="images/logo-white@2x.png" alt=""></a>
+                        <a href="index.html"><img class="footer-logo" src="images/logo-white-wore-it.png" alt=""></a>
                     </div>
                     <!-- end logo -->
                     <!-- start social media -->
