--- a/lifestyle.html
+++ b/lifestyle.html
@@ -81,7 +81,7 @@
     <!-- end header -->
         <!-- start page title section -->
         <section class="wow fadeIn parallax" data-stellar-background-ratio="0.5" style="background-image:url('images/hero-slider-1.jpg');">
-            <div class="opacity-medium bg-extra-dark-gray"></div>
+            <div class="bg-extra-dark-gray"></div>
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-12 d-flex flex-column justify-content-center text-center extra-small-screen page-title-large">
